<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/glossaryFragment"
        android:title="@string/glossario"
        android:icon="@drawable/ic_baseline_menu_book_24"/>


    <item
        android:id="@+id/achievementFragment"
        android:title="@string/Obbiettivi"
        android:icon="@drawable/ic_baseline_stars_24" />


</menu>