...
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.fragment.HomeFragment"
            tools:openDrawer="start"
            android:fitsSystemWindows="true"
            >
...
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.navigation.NavigationView

                android:id="@+id/navView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/nav_header"
                app:menu="@menu/nav_menu" />
...
