...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.ArgomentoFragment">

        <TextView
            android:id="@+id/quiz_nome_argomento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="20dp"
            android:text="Nome_Argomento"
...
                android:text="@{}"
                android:translationX="30dp" />
        </ScrollView>

        <Button
            style="@style/Bottone"
            android:id="@+id/b_quiz"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="81dp"
...
