...
            android:text="@{domandatastiera.domandaAttuale.testo_domanda}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/risposta_da_tastiera"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="81dp"
            android:background="@drawable/custom_input"
...
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testo_domanda_inserimento" />

        <Button
            android:id="@+id/b_conferma"
            style="@style/Bottone_risposta"

            android:layout_width="230dp"
            android:layout_height="60dp"
            android:text="@string/conferma_risposta"

...
